--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="event_description">Event Description</string>
     <string name="login">Login</string>
     <string name="sign_up">Sign Up</string>
+    <string name="username">Username</string>
     <string name="e_mail">E-Mail:</string>
     <string name="password">Password:</string>
     <string name="forgot_your_password">Forgot your password</string>
